# ciyana-shell

./: .gitignore  BUILD.md  Cargo.toml  README.md
.kilo/plans/: 1775154869628-quiet-comet.md  1775205753751-nimble-lagoon.md
ciyana-shell-bin/: Cargo.toml
ciyana-shell-core/: Cargo.toml
ciyana-shell-core/src/: compositor_shell.rs  lib.rs  window_management.rs
ciyana-shell-core/src/window_management/: mod.rs  window.rs  workspace.rs
ciyana-shell-wayland/: Cargo.toml
ciyana-shell-wayland/src/: backend.rs  lib.rs
ciyana-shell-widgets/: Cargo.toml
