[package]
name = "ciyana-shell-wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.12", features = [
  "client",
  "server",
  "staging",
] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client", "server"] }
wayland-server = "0.31.13"
ciyana-shell-core = { path = "../ciyana-shell-core" }
kanal = "0.1.1"
